--- a/document.tex
+++ b/document.tex
@@ -36,7 +36,7 @@
 
 %Подписи таблиц
 \usepackage[tableposition=top]{caption}
-\usepackage{subcaption}
+\usepackage{subcaption}abc
 \DeclareCaptionLabelFormat{gostfigure}{Рисунок #2}
 \DeclareCaptionLabelFormat{gosttable}{Таблица #2}
 \DeclareCaptionLabelSeparator{gost}{~---~}
